# pumice

./: .gitignore  AGENTS.md  COMPAT-BUDGET.md  COMPAT.json  COMPAT100.json  DOD1-CHECKLIST.md  Dockerfile  E2E.md  INTERNALS.md  LEGAL.md  LICENSE  README.md  ROADMAP.md  SDK.md  SUPPORT_POLICY.md  app.html  browser-verify.html  browser-verify.js  graph-demo.html  graph-demo.js  index.html  package-lock.json  package.json  playwright.config.js  top100.lock.json  vite.config.js
e2e/: workbench.spec.js
public/: manifest.webmanifest  sw.js
real-plugins/: buttons.js  tasks.js
real-plugins-100/: admonition.js  advanced-tables.js  dataview-serializer.js  file-explorer-note-count.js  homepage.js  linter.js  metaedit.js  obsidian-checklist.js  obsidian-consistent-attachments.js  obsidian-day-planner.js  obsidian-emoji-toolbar.js  obsidian-hider.js  obsidian-importer.js  obsidian-jump-to-link.js  obsidian-kindle-plugin.js  obsidian-latex-suite.js  obsidian-memos.js  obsidian-open-vault-in-vscode.js  obsidian-quick-explorer.js  obsidian-read-it-later.js  obsidian-reminder.js  obsidian-rollover-daily-todos.js  obsidian-spaced-repetition.js  outliner.js  supercharged-links.js  various-complements.js
scripts/: ci.mjs  compat-harness.mjs  compat-top100.mjs  dod-checklist.mjs  dom-bootstrap.mjs  drop-publish.mjs  mcp-stdio.mjs  package-exports.mjs  phase10-mobile.mjs  phase11-perf.mjs  phase12-mcp.mjs  phase2-editor.mjs  (+23 more)
src-tauri/app/: Cargo.toml  tauri.conf.json
src-tauri/app/capabilities/: default.json
src-tauri/app/icons/: icon.icns
src-tauri/app/src/: main.rs
(+60 files in other folders)
