[package]
name = "pumice"
version = "0.1.0"
description = "Pumice desktop shell (Tauri)"
edition = "2021"

[[bin]]
name = "pumice"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pumice-core = { path = "../core" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
